# python-template

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
