# pyproject.toml is the specified file format of PEP 518 which 
# contains the build system requirements of Python projects.

# This file lists all of the necessary dependencies for your package, 
# and package managers like pip can use this file to install all of the
# necessary dependencies automatically when your package is installed.

[project]
name = 'project_name' # Specify the dist package name
version = '0.0.0' # Version of the package
description = 'package_description'
authors = [
 { name = 'username', email = 'example@email.com' } 
]
# All the external packages our project depends on. 
# Versioning can also be specified.
dependencies = [
  'flake8',
  'pylint',
  'coverage',
  'pdoc',
  'build'
]

# Dependencies required by the build system
[build-system]
requires = [
  'setuptools>=46.1.3',
  'wheel>=0.34.2'
]
build-backend = 'setuptools.build_meta'